# Ciel

./: .gitignore  Dockerfile  README.md  build_llvm_env.sh  build_single_plugin.sh  gpuprec_patch.txt  run_docker.sh  setup.sh
clang-examples/: CMakeLists.txt
clang-examples/Ciel-plugin/: CMakeLists.txt  Ciel-plugin.cpp  ExpandPrecision.cpp  ExpandPrecision.h  FunctionAnalysis.cpp  FunctionAnalysis.h  Makefile  StmtRecursiveVisitor.cpp  StmtRecursiveVisitor.h  TransformInclude.h  ciel-base.h  utils.cpp  utils.h
driver/: run_test.py  search.py  setup_cc.cpp  setup_cc.sh
experiments_ecmwf/: Makefile  bundle.yml  compare.py  expected.txt  run.sh  setup.ini
experiments_ecmwf/serialbox/: CMakeLists.txt
experiments_ecmwf/serialbox/src/serialbox-fortran/: CMakeLists.txt
experiments_ecmwf/serialbox/test/export/bundle/: CMakeLists.txt
experiments_ecmwf/serialbox/test/export/bundle/downstream_c/: CMakeLists.txt
experiments_ecmwf/serialbox/test/export/bundle/downstream_fortran/: CMakeLists.txt
experiments_ecmwf/src/: CMakeLists.txt
experiments_nas_rodinia/: run_experiments.py
experiments_nas_rodinia/NPB_BT/: Makefile  bt.cu  expected.txt  make.def  npbparams.hpp  setup.ini
experiments_nas_rodinia/NPB_CG_S/: Makefile  cg.cu  expected.txt  npbparams.hpp  setup.ini
experiments_nas_rodinia/NPB_CG_W/: cg.cu  expected.txt  npbparams.hpp  setup.ini
experiments_nas_rodinia/NPB_LU/: Makefile  expected.txt  lu.cu  npbparams.hpp  setup.ini
experiments_nas_rodinia/NPB_MG/: Makefile  c_randdp.cpp  expected.txt  make.common  mg-no-cast.cu  mg.cu  npb-CPP.hpp  npbparams.hpp  setup.ini
experiments_nas_rodinia/rodinia_cfd_097K/: Makefile  compare.py  expected.txt  make.config  setup.ini
experiments_nas_rodinia/rodinia_cfd_193K/: Makefile  euler3d.cu  euler3d_double.cu  expected.txt  helper_cuda.h  setup.ini
experiments_nas_rodinia/rodinia_lud/: Makefile  common.c  expected.txt  lud.cu  lud_kernel.cu  setup.ini
experiments_pliner/: run_experiments.py
experiments_pliner/NPB_CG_B/: Makefile  cg.cpp  compare.py  expected.txt  npbparams.hpp  setup.ini
experiments_pliner/NPB_SP_A/: Makefile  exact_rhs.c  expected.txt  header.h  npbparams.h  print_results.c  setup.ini  type.h  verify.c
experiments_pliner/NPB_SP_B/: error.c  expected.txt  initialize.c  make.common  make.def  npbparams.h  print_results.h  set_constants.c  setup.ini  verify.c
experiments_pliner/varity_intel/: expected.txt  run_varity.py
experiments_varity/: expected.txt  oldnew.txt  run_varity.py  withloc.txt
experiments_varity/prog_1/: input.txt  results.txt  test.cu
experiments_varity/prog_10/: input.txt  test.cu
experiments_varity/prog_100/: input.txt  results.txt  test.cu
experiments_varity/prog_101/: input.txt  results.txt  test.cu
experiments_varity/prog_102/: input.txt  results.txt  test.cu
experiments_varity/prog_103/: input.txt  results.txt  test.cu
experiments_varity/prog_104/: input.txt  results.txt  test.cu
experiments_varity/prog_105/: input.txt  test.cu
experiments_varity/prog_106/: input.txt  results.txt  test.cu
experiments_varity/prog_107/: input.txt  results.txt  test.cu
experiments_varity/prog_108/: input.txt  results.txt  test.cu
experiments_varity/prog_109/: input.txt  test.cu
experiments_varity/prog_11/: input.txt  results.txt  test.cu
experiments_varity/prog_110/: Makefile  input.txt  test.cu
experiments_varity/prog_111/: input.txt  test.cu
experiments_varity/prog_112/: input.txt  test.cu
experiments_varity/prog_113/: input.txt  test.cu
experiments_varity/prog_114/: input.txt  results.txt  test.cu
experiments_varity/prog_115/: input.txt  results.txt  test.cu
experiments_varity/prog_116/: input.txt  results.txt  test.cu
experiments_varity/prog_117/: input.txt  test.cu
experiments_varity/prog_118/: input.txt  test.cu
experiments_varity/prog_119/: input.txt  test.cu
experiments_varity/prog_12/: input.txt  results.txt  test.cu
experiments_varity/prog_120/: input.txt  test.cu
experiments_varity/prog_121/: input.txt  test.cu
experiments_varity/prog_122/: input.txt  results.txt  test.cu
experiments_varity/prog_123/: input.txt  test.cu
experiments_varity/prog_124/: input.txt  test.cu
experiments_varity/prog_125/: input.txt  test.cu
experiments_varity/prog_126/: input.txt  results.txt  test.cu
experiments_varity/prog_127/: input.txt  results.txt  test.cu
experiments_varity/prog_128/: input.txt  results.txt  test.cu
experiments_varity/prog_129/: input.txt  results.txt  test.cu
experiments_varity/prog_13/: input.txt  results.txt  test.cu
experiments_varity/prog_130/: input.txt  test.cu
experiments_varity/prog_131/: input.txt  test.cu
experiments_varity/prog_132/: input.txt  test.cu
experiments_varity/prog_133/: input.txt  results.txt  test.cu
experiments_varity/prog_134/: input.txt  test.cu
experiments_varity/prog_135/: input.txt  results.txt  test.cu
experiments_varity/prog_136/: input.txt  results.txt  test.cu
experiments_varity/prog_137/: input.txt  results.txt  test.cu
experiments_varity/prog_138/: input.txt  results.txt  test.cu
experiments_varity/prog_139/: input.txt  results.txt  test.cu
experiments_varity/prog_14/: input.txt  test.cu
experiments_varity/prog_140/: input.txt  test.cu
experiments_varity/prog_141/: input.txt  results.txt  test.cu
experiments_varity/prog_142/: input.txt  test.cu
experiments_varity/prog_143/: input.txt  results.txt  test.cu
experiments_varity/prog_144/: input.txt  results.txt  test.cu
experiments_varity/prog_145/: input.txt  test.cu
experiments_varity/prog_146/: input.txt  test.cu
experiments_varity/prog_147/: input.txt  test.cu
experiments_varity/prog_148/: input.txt  results.txt  test.cu
experiments_varity/prog_149/: input.txt  test.cu
experiments_varity/prog_15/: input.txt  results.txt  test.cu
experiments_varity/prog_150/: input.txt  test.cu
experiments_varity/prog_151/: input.txt  results.txt  test.cu
experiments_varity/prog_152/: input.txt  results.txt  test.cu
experiments_varity/prog_153/: input.txt  results.txt  test.cu
(+799 files in other folders)
